2004-04-15  Vicki Murley  <vicki@apple.com>

	Fix mismatched_CFBundleShortVersionStrings verification failure

        * English.lproj/InfoPlist.strings:

=== WebCore-125.6 ===

2004-04-14  Vicki Murley  <vicki@apple.com>

	- fix build errors, update a few more files for 3612968

        * khtml/rendering/render_table.cpp: remove a stray curly bracket (from merging) that was breaking the build 
        * kwq/KWQKURL.mm:
        (KURL::KURL): remove a wayward break statement that was breaking the build

	
        * khtml/misc/htmlattrs.c: 
        (hash_attr):
        (findAttr):
        * khtml/misc/htmlattrs.h: 
        * kwq/KWQValueList.h: 
        (QValueList::insert):
        (QValueList::fromLast):
        * kwq/KWQValueListImpl.h:
        * kwq/KWQValueListImpl.mm:
        (KWQValueListImpl::clear):
        (KWQValueListImpl::insert):
        (KWQValueListImpl::fromLast):

2004-04-14  Vicki Murley  <vicki@apple.com>

	- merge fix for 3612968 from HEAD

    2004-03-23  David Hyatt  <hyatt@apple.com>

        Fix for 3487207, implement onscroll DOM event for elements with overflow:auto/scroll/hidden.  This does
        not handle firing onscroll on the window when the document scrolls, nor does it handle firing onscroll
        on textareas.  These are two separate bugs.

        This patch finishes stubbing out the onscroll event and adds support for it to the DOM.  It also supports
        the firing of the event when overflow blocks scroll.
        
        Reviewed by darin

        * khtml/ecma/kjs_dom.cpp:
        (DOMNode::getValueProperty):
        (DOMNode::putValue):
        * khtml/ecma/kjs_dom.h:
        (KJS::DOMNode::):
        * khtml/ecma/kjs_window.cpp:
        (Window::get):
        (Window::put):
        * khtml/ecma/kjs_window.h:
        (KJS::Window::):
        * khtml/html/html_baseimpl.cpp:
        (HTMLBodyElementImpl::parseAttribute):
        * khtml/html/html_elementimpl.cpp:
        (HTMLElementImpl::parseAttribute):