@@ -953,7 +953,9 @@ void RenderBlock::layoutBlockChildren( bool relayoutChildren )
             // to shift over as necessary to dodge any floats that might get in the way.
             if (child->avoidsFloats()) {
                 int leftOff = leftOffset(m_height);
-                if (leftOff != xPos) {
+                if (style()->textAlign() != KHTML_CENTER && child->style()->marginLeft().type != Variable)
+                    chPos = kMax(chPos, leftOff); // Let the float sit in the child's margin if it can fit.
+                else if (leftOff != xPos) {
                     // The object is shifting right. The object might be centered, so we need to
                     // recalculate our horizontal margins. Note that the containing block content
                     // width computation will take into account the delta between |leftOff| and |xPos|
@@ -968,8 +970,23 @@ void RenderBlock::layoutBlockChildren( bool relayoutChildren )
             }
         } else {
             chPos -= child->width() + child->marginRight();
-            if (child->avoidsFloats())
-                chPos -= (xPos - rightOffset(m_height));
+            if (child->avoidsFloats()) {
+                int rightOff = rightOffset(m_height);
+                if (style()->textAlign() != KHTML_CENTER && child->style()->marginRight().type != Variable)
+                    chPos = kMin(chPos, rightOff - child->width()); // Let the float sit in the child's margin if it can fit.
+                else if (rightOff != xPos) {
+                    // The object is shifting left. The object might be centered, so we need to
+                    // recalculate our horizontal margins. Note that the containing block content
+                    // width computation will take into account the delta between |rightOff| and |xPos|
+                    // so that we can just pass the content width in directly to the |calcHorizontalMargins|
+                    // function.
+                    // -dwh
+                    int cw = lineWidth( child->yPos() );
+                    static_cast<RenderBox*>(child)->calcHorizontalMargins
+                        ( child->style()->marginLeft(), child->style()->marginRight(), cw);
+                    chPos = rightOff - child->marginRight() - child->width();
+                }
+            }
         }
 
         child->setPos(chPos, child->yPos());
@@ -1632,7 +1649,7 @@ RenderBlock::lowestPosition(bool includeOverflowInterior, bool includeSelf) cons
         QPtrListIterator<FloatingObject> it(*m_floatingObjects);
         for ( ; (r = it.current()); ++it ) {
             if (!r->noPaint) {
-                int lp = r->startY + r->node->lowestPosition(false);
+                int lp = r->startY + r->node->marginTop() + r->node->lowestPosition(false);
                 bottom = kMax(bottom, lp);
             }
         }
@@ -1670,7 +1687,7 @@ int RenderBlock::rightmostPosition(bool includeOverflowInterior, bool includeSel
         QPtrListIterator<FloatingObject> it(*m_floatingObjects);
         for ( ; (r = it.current()); ++it ) {
             if (!r->noPaint) {
-                int rp = r->left + r->node->rightmostPosition(false);
+                int rp = r->left + r->node->marginLeft() + r->node->rightmostPosition(false);
            	right = kMax(right, rp);
             }
         }
@@ -1708,7 +1725,7 @@ int RenderBlock::leftmostPosition(bool includeOverflowInterior, bool includeSelf
         QPtrListIterator<FloatingObject> it(*m_floatingObjects);
         for ( ; (r = it.current()); ++it ) {
             if (!r->noPaint) {
-                int lp = r->left + r->node->leftmostPosition(false);
+		int lp = r->left + r->node->marginLeft() + r->node->leftmostPosition(false);
                 left = kMin(left, lp);
             }
         }
